--- a/OPSC7311POE/app/src/main/res/layout/activity_monthly_summary.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_monthly_summary.xml
@@ -226,116 +226,245 @@
         app:layout_constraintBottom_toTopOf="@+id/cl_NavBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idGraphView">
 
         <TableRow
-            android:layout_width="300dp"
-            android:layout_height="64dp">
+            android:id="@+id/trBlank"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
 
             <TableRow
-                android:layout_width="195dp"
-                android:layout_height="64dp">
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/trTopCat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center|right">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/tvTopCategory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="@string/top_category" />
             </TableRow>
 
             <TableRow
-                android:layout_width="195dp"
-                android:layout_height="64dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|left">
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/tvTopCatAns"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </TableRow>
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/trSmallBlank"
+            android:layout_width="match_parent"
+            android:layout_height="20dp">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/trTotalHours"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center|right">
+
+                <TextView
+                    android:id="@+id/tvTotalHours"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="@string/total_hours_recorded" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|left">
+
+                <TextView
+                    android:id="@+id/tvTotHoursAns"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </TableRow>
 
         </TableRow>
 
         <TableRow
-            android:layout_width="300dp"
-            android:layout_height="64dp">
+            android:id="@+id/trSmallBlank2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="64dp">
+                android:layout_height="10dp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/trAveHours"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center|right">
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/tvAveHoursPD"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="@string/ave_hours_per_day" />
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="64dp">
+                android:layout_height="match_parent"
+                android:gravity="center|left">
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/tvAveHoursAns"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_height="wrap_content" />
             </TableRow>
         </TableRow>
 
         <TableRow
-            android:layout_width="300dp"
-            android:layout_height="64dp">
+            android:id="@+id/trSmallBlank3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="64dp">
+                android:layout_height="10dp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/trBusiestWeek"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center|right">
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/tvBusiestWeek"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="@string/busiest_week" />
             </TableRow>
 
             <TableRow
-                android:layout_width="150dp"
-                android:layout_height="64dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|left">
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/tvBusyWeekAns"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_height="wrap_content" />
             </TableRow>
         </TableRow>
 
         <TableRow
-            android:layout_width="300dp"
-            android:layout_height="64dp">
+            android:id="@+id/trSmallBlank4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="64dp">
+                android:layout_height="10dp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/trMostProdDay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center|right">
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/tvMostProdDay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="@string/most_productive_day" />
             </TableRow>
 
             <TableRow
-                android:layout_width="150dp"
-                android:layout_height="64dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|left">
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/tvMostProdDayAns"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </TableRow>
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/trSmallBlank5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/trTimeTask"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center|right">
+
+                <TextView
+                    android:id="@+id/tvMostTimeTask"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="@string/most_time_consuming_task" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|left">
+
+                <TextView
+                    android:id="@+id/tvMostTimeTaskAns"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </TableRow>
         </TableRow>
+
     </TableLayout>
 
 
