--- a/OPSC7311POE/app/src/main/res/layout/task_listing.xml
+++ b/OPSC7311POE/app/src/main/res/layout/task_listing.xml
@@ -4,11 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:background="#FFFFFF"
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#000000"
+        android:backgroundTint="#FFFFFF"
+        android:outlineProvider="background">
 
         <TextView
             android:id="@+id/tvTask_name"
